# eagle

eagle_web/: pyproject.toml
eagle_web/eagle_web/: main.py
eagle_web/eagle_web.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eagle_web/eagle_web/app/: __init__.py  worker.py
eagle_web/eagle_web/app/api/v1/: items.py
eagle_web/eagle_web/app/router/: __init__.py
eagle_web/eagle_web/app/tasks/: __init__.py  demo_tasks.py
eagle_web/src/eagle_web/: __init__.py  asgi.py  worker.py
eagle_web/src/eagle_web/api/: __init__.py
eagle_web/src/eagle_web/api/v1/: items.py
eagle_web/src/eagle_web/item/: demo_items.py
eagle_web/src/eagle_web/router/: __init__.py
eagle_web/src/eagle_web/tasks/: demo_tasks.py
eagle_web/tests/: test_eagle_web.py
