[tool.poetry]
name = "eagle_web"
version = "0.1.0"
description = ""
authors = ["dargons0207@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.2"
fastapi = "^0.61.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
